--- a/src/app/pages/application-management/application-atividade-detail/application-atividade-detail.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/application-atividade-detail.component.html
@@ -3,7 +3,7 @@
         Candidatura para o Pedido de Licenca para Exercicio de Atividade {{aplicanteData.categoria | titlecase}}
     </span>
 
-    <p-stepper [value]="1" class="basis-[50rem]" [linear]="false">
+    <p-stepper [value]="1" class="basis-[50rem]" [linear]="true">
         <p-step-list>
             <p-step [value]="1">Detalho da Aplicação</p-step>
             @if (isSubmitted(aplicanteData)) {
@@ -320,6 +320,33 @@
                                         <p-tag value="Em curso" [severity]="'info'" icon="pi pi-clock" />
                                         }
 
+                                    </div>
+                                </div>
+                                <div
+                                    class="flex flex-col sm:flex-row items-start sm:items-center justify-between p-4 bg-[#3A3A41] rounded-lg">
+                                    <div class="flex items-center mb-4 sm:mb-0">
+                                        <div
+                                            class="flex items-center justify-center h-12 w-12 rounded-full bg-orange-500 text-white mr-4">
+                                            <i class="bi bi-person-check text-2xl"></i>
+                                        </div>
+                                        <div>
+                                            <h3 class="text-lg font-semibold text-white">
+                                                Revisto pelo Chefe de Departamento
+                                            </h3>
+                                            <p class="text-sm text-gray-400">
+                                                Detalhes do Auto Vistoria
+                                                {{aplicanteData.categoria |titlecase}}
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="flex items-center space-x-4">
+                                        @if (aplicanteData.estado === 'REVISTO' || aplicanteData.estado === 'APROVADO')
+                                        {
+                                        <p-tag [value]="'REVISTO'" [severity]="'SUBMETIDO'" />
+                                        }
+                                        @else {
+                                        <p-tag value="Em curso" [severity]="'info'" icon="pi pi-clock" />
+                                        }
                                     </div>
                                 </div>
                                 <div
