--- a/src/app/pages/empresa/empresa-detail/empresa-detail.component.html
+++ b/src/app/pages/empresa/empresa-detail/empresa-detail.component.html
@@ -1,30 +1,4 @@
-<div class="text-center mb-8">
-    <h2 class="text-2xl font-semibold ">
-        Selecione o tipo de serviço de que necessita para continuar
-    </h2>
-    <p class="text-gray-400  mt-2">
-        Escolha entre as nossas soluções Comercial ou Industrial, adaptadas às necessidades do seu negócio.
-    </p>
-</div>
-<div class="grid grid-cols-12 gap-8 mb-10">
-    <div class="col-span-6">
-        <div class=" bg-gray-800 rounded-xl !p-4 cursor-pointer hover-scale" (click)="showDialog(comercial)">
-            <div class="flex flex-col items-center justify-center h-full p-4">
-                <i class="bi bi-cart3 text-emerald-400 mb-2" style="font-size: 3.5rem"></i>
-                <span class="text-xl font-semibol">Comercial</span>
-            </div>
-        </div>
-    </div>
-    <div class="col-span-6">
-        <div class="bg-gray-800 rounded-xl !p-4 cursor-pointer hover-scale" (click)="showDialog(industrial)">
-            <div class="flex flex-col items-center justify-center h-full p-4">
-                <i class="bi bi-building-gear text-emerald-400 mb-2" style="font-size: 3.5rem"></i>
-                <span class="text-xl font-semibol">Industrial</span>
-            </div>
-        </div>
-    </div>
-</div>
-
+@if (empresa) {
 <div class="flex flex-col md:flex-row items-start md:items-center justify-between mb-10">
     <div class="flex items-center mb-4 md:mb-0">
         <div class="bg-gray-800 p-3 rounded-xl mr-4">
@@ -250,34 +224,4 @@
         </div>
     </div>
 </main>
-<p-toast position="bottom-center" />
-<p-dialog header="Criar Aplicante" [modal]="true" [position]="'top'" [(visible)]="visible" [style]="{ width: '45rem' }">
-    <div class="card">
-        <div class="grid grid-cols-12 gap-8 md:gap-4">
-            <div class="col-span-12">
-                <p class="m-0 p-0 text-surface-600 dark:text-surface-200 leading-normal mr-4">Forneça as informações
-                    necessárias abaixo para configurar uma nova inscrição.</p>
-            </div>
-
-            <div class="col-span-12">
-                <form [formGroup]="applicationForm">
-                    <div class="grid grid-cols-12 gap-4">
-                        <div class="mb-6 col-span-12">
-                            <label for="tipo" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                Tipo Aplicante
-                            </label>
-                            <p-select formControlName="tipo" inputId="tipo" [options]="applicationTypes"
-                                optionLabel="name" fluid [showClear]="true" placeholder="Selecione um tipo">
-                            </p-select>
-                        </div>
-                    </div>
-                    <button (click)="create(applicationForm)" icon="pi pi-plus" [loading]="loading"
-                        [disabled]="!applicationForm.valid" pButton pRipple label="Criar Aplicante"
-                        class="w-auto mt-3 mr-4"></button>
-                    <p-button label="Cancelar" severity="secondary" icon="pi pi-times" iconPos="left"
-                        (click)="visible = false" />
-                </form>
-            </div>
-        </div>
-    </div>
-</p-dialog>
+}
